<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <DUT Name="T_LighInformation" Id="{d00a6430-b78a-49b6-842b-9a8dd51cba33}">
    <Declaration><![CDATA[TYPE T_LighInformation :
STRUCT
	eState			: E_LIGHTSTATE;
	udiTime_ms		: UDINT;
	bolOutput		: REFERENCE TO BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>